k8s app/my-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-express-application-ingress
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /fibonacci
        pathType: Prefix
        backend:
          service:
            name: my-express-application-service
            port:
              number: 80
