k8s app/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-labeled-pods
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: express-app
  ingress:
  - from:
    - podSelector:
        matchLabels:
          access: allowed
  policyTypes:
  - Ingress
